set fixed height to make the scrollbar work

--- a/public/styles/gamerStyling.css
+++ b/public/styles/gamerStyling.css
@@ -33,7 +33,7 @@
 #movie-selections{
     display: none;
     overflow-y: scroll;
-    height: 45%;
+    height: 100px;
 }
 
 .search-videos{
